Added to category theory

--- a/react-app/src/pages/tex.css
+++ b/react-app/src/pages/tex.css
@@ -53,3 +53,8 @@
   font-weight: bold;
   font-style: normal;
 }
+
+.cat {
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-weight: 900;
+}
